# DualLQR

./: CITATION.cff  README.md
.github/workflows/: license.yml
analysis_experiments/apple_grasping_experiments/: 01_trajectory_analyser.py  02_result_visualiser.py  03_traj_visualiser.py
analysis_experiments/simulation_experiments/: 01_trajectory_analyser.py  02_result_visualiser.py
apple_grasping_experiments/lfd_executor/: calibration.yaml  traj_executor_reactive_no_ros.py
apple_grasping_experiments/lfd_executor/rtb_model/: UR5e.py  ur5e.urdf
simulation_experiments/: simulation_test.py
simulation_experiments/lfd_executor/: package.xml  setup.cfg  setup.py
simulation_experiments/lfd_executor/launch/: lfd.launch.py
simulation_experiments/lfd_executor/lfd_executor/: controlled_goal_pose_broadcaster.py  dynamic_base_frame_broadcaster.py  relaxed_frame_broadcaster.py  simulation_testing.py  tcp_for_ik_broadcaster.py  traj_executor_reactive.py
simulation_experiments/lfd_executor/lfd_executor/pbdlib_custom/: gmmr.py
simulation_experiments/lfd_executor_msgs/: CMakeLists.txt  package.xml
simulation_experiments/lfd_executor_msgs/action/: ControlledGoalPose.action  DynamicBaseFrame.action  TrajectoryExecuteReactive.action
simulation_experiments/lfd_executor_msgs/srv/: LfDPred.srv  TrajPred.srv
simulation_experiments/reactive_arm_control/: package.xml  setup.cfg  setup.py
simulation_experiments/reactive_arm_control/config/: ur5e_servo_config.yaml
simulation_experiments/reactive_arm_control/launch/: reactive_arm_control.launch.py  ur_control.launch.py
